--- a/src/app/panel/directorios/usuarios/admin-add/admin-add.component.html
+++ b/src/app/panel/directorios/usuarios/admin-add/admin-add.component.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </div>
-        <div class="super-admin">
+        <!--<div class="super-admin">
             <h4>Permiso de super admin</h4>
             <div class="check">
                 <label class="switch">
@@ -52,6 +52,6 @@
                 </label>
                 <p>Inactivo</p>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
