--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -20,7 +20,7 @@
       <a class="col-12" [routerLink]="[ '/admin/perfil' ]" routerLinkActive="active-link">
         <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Perfil
       </a>
-      <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
+      <a class="col-12" [routerLink]="[ '/admin/estadisticas' ]" routerLinkActive="active-link">
         <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Estadisticas
       </a>
       <a class="col-12" [routerLink]="[ '/admin/pagos' ]" routerLinkActive="active-link">
