--- a/src/app/panel/directorios/carros-categorizados/carros-categorizados.component.html
+++ b/src/app/panel/directorios/carros-categorizados/carros-categorizados.component.html
@@ -34,7 +34,7 @@
             <td>{{' user.email' }}</td>
 
             <td class="point-more">
-              <button mat-button (click)="carId = c.id;$event.stopPropagation()" [matMenuTriggerFor]="menu"> <i
+              <button mat-button [matMenuTriggerFor]="menu"> <i
                   class="fas fa-ellipsis-h"></i> </button>
             </td>
           </tr>
