--- a/src/app/panel/manejo-usuario/pago/pago.component.html
+++ b/src/app/panel/manejo-usuario/pago/pago.component.html
@@ -10,7 +10,7 @@
                 <div class="number-pink">3</div>
                 <div class="input">
                     <i class="fas fa-search"></i>
-                    <input type="text" name="search" (click)="search = !search" />
+                    <input type="text" name="search"  />
                 </div>
             </div>
         </div>
