--- a/src/app/panel/manejo-usuario/estadistica/estadistica.component.html
+++ b/src/app/panel/manejo-usuario/estadistica/estadistica.component.html
@@ -1,14 +1,33 @@
 <section class="container mt-5">
   <h2>Estadisticas</h2>
 
-  <h4 class="mt-3" >Ventas Anuales</h4>
+  <div class="row">
+    <div class="col-12">
+      <p class="text-secondary" > Selecciona una fecha de inicio y una defianl </p>
+    </div>
+    <mat-form-field class="col-5" >
+      <input disabled matInput (dateChange)="gatedate($event.value,1)" [matDatepicker]="picker" placeholder="Inicio">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker disabled="false" #picker></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field class="col-5" >
+      <input disabled matInput (dateChange)="gatedate($event.value,2)" [matDatepicker]="picker2" placeholder="Fin">
+      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+      <mat-datepicker disabled="false" #picker2></mat-datepicker>
+    </mat-form-field>
+    <div class="col">
+      <button [disabled]="blockSend" (click)="searchDate()" class="btn btn-primary" > Buscar </button>
+    </div>
+  </div>
+
+  <h4 class="mt-3" > Clientes </h4>
   <mat-divider></mat-divider>
   <div>
     <div>
       <div style="display: block">
         <canvas baseChart
-          [datasets]="barChartData"
-          [labels]="barChartLabels"
+          [datasets]="barChartDataClient"
+          [labels]="barChartLabelsClient"
           [options]="barChartOptions"
           [plugins]="barChartPlugins"
           [legend]="barChartLegend"
@@ -18,14 +37,14 @@
     </div>
   </div>
 
-  <h4 class="mt-3" >Cancelaciones</h4>
+  <h4 class="mt-3" > Servicios </h4>
   <mat-divider></mat-divider>
   <div>
     <div>
       <div style="display: block">
         <canvas baseChart
-          [datasets]="barChartData"
-          [labels]="barChartLabels"
+          [datasets]="barChartDataServices"
+          [labels]="barChartLabelsServices"
           [options]="barChartOptions"
           [plugins]="barChartPlugins"
           [legend]="barChartLegend"
@@ -35,14 +54,31 @@
     </div>
   </div>
 
-  <h4 class="mt-3" >Usuarios</h4>
+  <h4 class="mt-3" >Carros</h4>
   <mat-divider></mat-divider>
   <div>
     <div>
       <div style="display: block">
         <canvas baseChart
-          [datasets]="barChartData"
-          [labels]="barChartLabels"
+          [datasets]="barChartDataCars"
+          [labels]="barChartLabelsCars"
+          [options]="barChartOptions"
+          [plugins]="barChartPlugins"
+          [legend]="barChartLegend"
+          [chartType]="barChartType">
+        </canvas>
+      </div>
+    </div>
+  </div>
+
+  <h4 class="mt-3" > Providers </h4>
+  <mat-divider></mat-divider>
+  <div>
+    <div>
+      <div style="display: block">
+        <canvas baseChart
+          [datasets]="barChartDataProviders"
+          [labels]="barChartLabelsProviders"
           [options]="barChartOptions"
           [plugins]="barChartPlugins"
           [legend]="barChartLegend"
